objects/Homepage_Links__c.object
<CustomObject>
    <fields>
        <fullName>Link_10__c</fullName>
        <label>Link 10</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_11__c</fullName>
        <label>Link 11</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_12__c</fullName>
        <label>Link 12</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X10_Bookmark__c</fullName>
        <label>10. Bookmark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X11_Bookmark__c</fullName>
        <label>11. Bookmark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12_Bookmark__c</fullName>
        <label>12. Bookmark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>